Termino maquetado de home

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!-- HERE STARTS THE HEADER THAT CONTAINS THE NAVBAR -->
@@ -70,13 +85,35 @@
         />
       </section>
       <!-- FINISH SEARCH BAR SECTION -->
-      <!-- STARTS TRENDING SECTION -->
-      <section class="trending">
-        <h2 class="trending__title">Trending:</h2>
-        <p class="trending__text">
+      <!-- STARTS TRENDING SEARCHS SECTION -->
+      <section class="trending-searchs">
+        <h2 class="trending-searchs__title">Trending:</h2>
+        <p class="trending-searchs__text">
           Reactions, Entertainment, Sports, Stickers, Artist
         </p>
       </section>
+      <!-- FINISH TRENDING SEARCHS -->
+      <!-- STARTS TRENDING GIFS SECTION -->
+      <section class="trending-gifs">
+        <h2 class="trending-gifs__title">Trending GIFOS</h2>
+        <p class="trending-gifs__text">
+          Mira los últimos<span class="trending-gifs__text__blockText">
+            GIFOS de nuestra comunidad</span
+          >
+        </p>
+        <div class="carrusel">Carrusel Placeholder</div>
+      </section>
+      <!-- FINISH TRENDING GIFS -->
+      <!-- STARTS SOCIAL SECTION -->
+      <footer class="social">
+        <h2 class="social__title">Compartir en:</h2>
+        <div class="social__icon-container">
+          <i class="fab fa-facebook-f social-icon"></i>
+          <i class="fab fa-twitter social-icon"></i>
+          <i class="fab fa-instagram social-icon"></i>
+        </div>
+        <p class="social__text">&copy GIFOS 2020 All Rights Reserved.</p>
+      </footer>
     </main>
     <script src="script/main.js"></script>
   </body>
