--- a/index.html
+++ b/index.html
@@ -93,6 +93,35 @@
         </p>
       </section>
       <!-- FINISH TRENDING SEARCHS -->
+      <!-- STARTS SEARCH PAGE -->
+      <!-- This page will be hidden and will be controled with JS -->
+      <section class="searchs searchs-hidden">
+        <div class="searchs__top-border"></div>
+        <h2 class="searchs__title">Placeholder</h2>
+        <div class="searchs__gifs">Searchs placeholders</div>
+        <button class="searchs__btn">VER MÁS</button>
+      </section>
+      <!-- FINISH SEARCH PAGE -->
+      <!-- STARTS FAVOURITE SECTION -->
+      <section class="favourites">
+        <img
+          src="assets/mobile/icon-favoritos.svg"
+          alt="icono favoritos"
+          id="fav"
+        />
+        <h2 class="favourites__title">Favoritos</h2>
+        <div class="favourites__gifs">Favourites placeholders</div>
+        <button class="favourites__btn">VER MÁS</button>
+      </section>
+      <!-- FINISH FAVOURITE SECTION -->
+      <!-- STARTS MI GIFOS SECTION -->
+      <section class="miGifos">
+        <img src="assets/mobile/icon-mis-gifos.svg" alt="mi gifos icon" />
+        <h2 class="miGifos__title">Mis GIFOS</h2>
+        <div class="miGifos__gifs">mi gifos placeholder</div>
+        <button class="miGifos__btn">VER MÁS</button>
+      </section>
+      <!-- FINISH MI GIFOS SECTION -->
       <!-- STARTS TRENDING GIFS SECTION -->
       <section class="trending-gifs">
         <h2 class="trending-gifs__title">Trending GIFOS</h2>
@@ -104,7 +133,7 @@
         <div class="carrusel">Carrusel Placeholder</div>
       </section>
       <!-- FINISH TRENDING GIFS -->
-      <!-- STARTS SOCIAL SECTION -->
+      <!-- STARTS SOCIAL FOOTER -->
       <footer class="social">
         <h2 class="social__title">Compartir en:</h2>
         <div class="social__icon-container">
@@ -114,6 +143,7 @@
         </div>
         <p class="social__text">&copy GIFOS 2020 All Rights Reserved.</p>
       </footer>
+      <!-- FINISH SOCIAL FOOTER -->
     </main>
     <script src="script/main.js"></script>
   </body>
