Desinstalo InjectSGV package y corrigo search bar

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="search-bar" id="search-bar">
           <div class="search-bar__input">
             <img
-              src="assets/mobile/icon-search.svg"
+              src="assets/mobile/icon-search-grey.svg"
               alt="search icon"
               id="search-icon-active"
               class="hidden"
@@ -97,6 +97,7 @@
               type="text"
               name="search-input"
               id="search-input"
+              value=""
               placeholder="Busca GIFOS y más"
             />
             <img
@@ -112,6 +113,7 @@
             />
           </div>
           <div class="search-bar__suggestion hidden" id="suggestion">
+            <div class="search-bar__suggestion__border"></div>
             <ul class="search-bar__suggestion__list" id="suggestion-list"></ul>
           </div>
         </div>
