Agrego gif maximizado

--- a/index.html
+++ b/index.html
@@ -188,6 +188,32 @@
       <!-- FINISH SOCIAL FOOTER -->
     </main>
 
+    <!-- MAXIMIZED GIFS -->
+    <div class="hidden" id="maximized-container">
+      <div class="maximizedGifs">
+        <div class="maximizedGifs__close hidden" id="maximizedGifs__close">
+          <img
+            src="./assets/mobile/close.svg"
+            alt="close maximized gif"
+            class="maxGif-btnClose"
+          />
+        </div>
+        <div class="maximizedGifs__gif" id="maximizedGifs__gif"></div>
+        <div class="maximizedGifs__icons hidden" id="maximizedGifs__icons">
+          <div id="maxGif-data">
+            <p id="maxGif-user"></p>
+            <p id="maxGif-title"></p>
+          </div>
+          <div>
+            <img
+              src="./assets/mobile/icon-fav-hover.svg"
+              alt="add to favourite"
+            />
+            <img src="./assets/mobile/icon-download.svg" alt="download gif" />
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- SCRIPTS -->
     <script src="script/variables.js"></script>
     <script src="script/main.js"></script>
