Agrego funcionalidad de descargar gifs

--- a/index.html
+++ b/index.html
@@ -215,9 +215,11 @@
 							src="./assets/mobile/icon-fav-hover.svg"
 							alt="add to favourite"
 						/>
-						<a class="download-btn">
-							<img src="./assets/mobile/icon-download.svg" alt="download gif"
-						/></a>
+						<img
+							src="./assets/mobile/icon-download.svg"
+							alt="download gif"
+							id="download-btn"
+						/>
 					</div>
 				</div>
 			</div>
