Agrego funcionalidad de agregar a favoritos en localStorage

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>GIFOS</title>
@@ -167,6 +168,7 @@
 							src="./assets/mobile/button-left.svg"
 							alt="carousel button left"
 							class="btnImg-carousel"
+							id="btnImg-prev"
 						/>
 					</div>
 					<div class="carousel-track" id="track"></div>
@@ -175,6 +177,7 @@
 							src="./assets/mobile/button-right.svg"
 							alt="carousel button left"
 							class="btnImg-carousel"
+							id="btnImg-next"
 						/>
 					</div>
 				</div>
@@ -212,8 +215,9 @@
 					</div>
 					<div class="maxGif-icons">
 						<img
-							src="./assets/mobile/icon-fav-hover.svg"
+							src="assets/mobile/icon-fav-hover.svg"
 							alt="add to favourite"
+							id="maxFav-icon"
 						/>
 						<img
 							src="./assets/mobile/icon-download.svg"
