Termino efectos en iconos de favoritos

--- a/index.html
+++ b/index.html
@@ -213,18 +213,7 @@
 						<p id="maxGif-user"></p>
 						<p id="maxGif-title"></p>
 					</div>
-					<div class="maxGif-icons">
-						<img
-							src="assets/mobile/icon-fav-hover.svg"
-							alt="add to favourite"
-							id="maxFav-icon"
-						/>
-						<img
-							src="./assets/mobile/icon-download.svg"
-							alt="download gif"
-							id="download-btn"
-						/>
-					</div>
+					<div class="maxGif-icons"></div>
 				</div>
 			</div>
 		</div>
