Agrego search bar en nav bar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,44 @@
 						alt="logo-mobile"
 						id="logo-mobile"
 					/>
+					<div class="navbarSearch-bar searchHidden">
+						<div class="navbarSearch-bar__input">
+							<img
+								src="assets/mobile/icon-search-grey.svg"
+								alt="search icon"
+								id="navbarSearch-icon-active"
+								class="hidden"
+							/>
+							<input
+								type="text"
+								name="navbarSearch-input"
+								id="navbarSearch-input"
+								value=""
+								placeholder="Busca GIFOS y más"
+							/>
+							<img
+								src="assets/mobile/icon-search.svg"
+								alt="search icon"
+								id="navbarSearch-icon"
+							/>
+							<img
+								src="assets/mobile/close.svg"
+								alt="close search icon"
+								id="close-navbarSearch-icon"
+								class="hidden"
+							/>
+						</div>
+					</div>
+					<div class="navbar-desktop desktopnav-hidden">
+						<p class="navlinks-desktop">MODO NOCTURNO</p>
+						<p class="navlinks-desktop">FAVORITOS</p>
+						<p class="navlinks-desktop">MIS GIFOS</p>
+						<img
+							src="assets/mobile/button-crear-gifo.svg"
+							alt="crear gifos"
+							id="createGif-btn"
+						/>
+					</div>
 					<img
 						src="https://gif-os.netlify.app/assets/mobile/burger.svg"
 						alt="burger-menu"
