Corrijo funcionalidad de eliminar favoritos

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						>
 					</p>
 				</div>
-				<button class="favourites__btn hidden">VER MÁS</button>
+				<button class="favourites__btn">VER MÁS</button>
 			</section>
 			<!-- FINISH FAVOURITE SECTION -->
 
